--- a/config/room_config.json
+++ b/config/room_config.json
@@ -7,10 +7,10 @@
       "以后再说（按钮）": "com.ss.android.ugc.aweme:id/k_y",
       "抖音想访问你的通讯录": "com.ss.android.ugc.aweme:id/io4",
       "拒绝访问通讯录": "com.ss.android.ugc.aweme:id/q0",
-      "弹窗4": "//*[@resource-id=\"com.ss.android.ugc.aweme:id/content_layout\"]",
-      "关闭4": "com.ss.android.ugc.aweme:id/d05",
-      "弹窗5": "com.android.permissioncontroller:id/content_container",
-      "关闭5": "com.android.permissioncontroller:id/permission_allow_button",
+      "个人信息保护指引": "com.ss.android.ugc.aweme:id/content_layout",
+      "同意个人信息": "com.ss.android.ugc.aweme:id/d05",
+      "开启通知/地理位置": "com.android.permissioncontroller:id/content_container",
+      "拒绝开启通知/地理位置": "com.android.permissioncontroller:id/permission_deny_button",
       "弹窗6": "//*[@resource-id=\"com.android.permissioncontroller:id/content_container\"]/android.widget.LinearLayout[1]",
       "关闭6": "com.android.permissioncontroller:id/permission_deny_button",
       "抖音没有响应": "android:id/topPanel",
@@ -32,6 +32,7 @@
     },
     "search_page": {
       "搜索页面1": "com.ss.android.ugc.aweme:id/j1+",
+      "搜索页面11": "com.ss.android.ugc.aweme:id/kcv",
       "搜索页面2": "com.ss.android.ugc.aweme:id/xkp",
       "搜索页面3": "com.ss.android.ugc.aweme:id/o2z",
       "账号头像": "//*[@resource-id=\"com.ss.android.ugc.aweme:id/lxd\"]/android.widget.LinearLayout[1]/android.widget.FrameLayout[1]/android.widget.FrameLayout[1]/android.widget.FrameLayout[1]/android.widget.FrameLayout[1]/android.widget.FrameLayout[1]/com.lynx.tasm.behavior.ui.view.UIView[3]",
